# oligo-designer-toolsuite

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CONTRIBUTION.md  LICENSE  MANIFEST.in  Our_notebook copy.ipynb  Our_notebook.ipynb  README.md  conftest.py  counting.ipynb  environment.yml  example_genomic_regions.gtf  genes_10000.txt  get_exome.py  get_overlap_matrix.py  get_unique_probes.py  merfish_pipeline.ipynb  pipeline.ipynb  pipeline.py  probe_design.py  probe_design.yaml  probedesign.py  probedesign.yaml  pyproject.toml  pytest.ini  setup.py
.github/workflows/: release.yml  test dependencies.yaml  test.yaml  test.yml  test_2.yaml  test_macos_arm64.yml  test_macos_x64.yml  test_modules.yml  test_test.yaml  test_ubuntu_x64.yml  test_windows.yml
SPOT/: Our_notebook.ipynb  temp_oligo.pkl
SPOT/configs/: probe_design_SPOT_custom.yaml
config/: padlock_oligo_designer.yaml  padlock_probe_designer.yaml
config/ftp/: default.yaml
config/melting_temperature/: default.yaml
config/probe_design/: default.yaml
config/specificity_filter/: blastn.yaml
data/: README.md  genes_ncbi_10.txt
data/annotations/: custom_GCF_000001405.40_GRCh38.p14_genomic_chr16.fna.fai  custom_GCF_000001405.40_GRCh38.p14_genomic_chr16.gtf.tsv
data/bc25mer/: bc25mer.1k.fasta  example.fasta  primer_oligo.fasta  primer_probe.fasta
data/configs/: cycle_hcr_probe_designer.yaml  genomic_region_generator_custom.yaml  genomic_region_generator_ensemble.yaml  genomic_region_generator_ncbi.yaml  merfish_probe_designer.yaml  merfish_probe_designer_custom.yaml  oligo_seq.yaml  oligo_seq_custom.yaml  oligo_seq_designer.yaml  oligo_seq_ensembl.yaml  oligo_seq_ncbi.yaml  oligo_seq_probe_designer.yaml  probe_design_SPOT_ncbi.yaml  scrinshot_probe_designer.yaml  scrinshot_probe_designer_custom.yaml  scrinshot_probe_designer_ensembl.yaml  scrinshot_probe_designer_ncbi.yaml  seqfish_plus_probe_designer.yaml  seqfish_plus_probe_designer_custom.yaml  seqfish_plus_probe_designer_ncbi.yaml  test_AI_filters.yaml
data/genes/: custom_10.txt  custom_100.txt  custom_2.txt  custom_200.txt  custom_3.txt  ncbi_10.txt
data/predefined_sequences/: cycle_hcr_readout_probes.tsv
data_v2/: genes_ensemble_3000.txt
docs/: requirements.txt
docs/source/: README.rst  README_2.rst  conf.py  index.rst  installation.rst  introduction.rst  modules.rst  oligo_designer_toolsuite.IO.rst  oligo_designer_toolsuite.database.rst  oligo_designer_toolsuite.experiment_specific.rst  oligo_designer_toolsuite.oligo_efficiency.rst  oligo_designer_toolsuite.oligo_efficiency_filter.rst  oligo_designer_toolsuite.oligo_property_filter.rst  oligo_designer_toolsuite.oligo_selection.rst  oligo_designer_toolsuite.oligo_specificity_filter.rst  oligo_designer_toolsuite.oligo_transcript_generation.rst  oligo_designer_toolsuite.pipelines.rst  oligo_designer_toolsuite.rst  oligo_designer_toolsuite.sequence_design.rst  oligo_designer_toolsuite.utils.rst  tutorial.rst  user_guide.rst
oligo_designer_toolsuite/: __init__.py  _constants.py  _version.py  annotation_loader.py  constants.py  datamodule.py  nonoverlapping_sets.py  padlock_design.py  pipeline.py  probe_filter.py  probe_sequence_designer.py  probedesign.py  probefilter.py  probesets_generator.py  test_DB.ipynb  test_filters.ipynb  test_filters.py  utils.py
oligo_designer_toolsuite/IO/: __init__.py  _data_parser.py  _database.py  _ftp_loader.py  _oligos_database.py  _reference_database.py  test_DB.ipynb  test_loader.ipynb
oligo_designer_toolsuite/UI/: __init__.py  _cli.py  _config.py
oligo_designer_toolsuite/database/: __init__.py  _genomic_region_generator.py  _oligo_database.py  _oligo_database_attributes.py  _oligos_database.py  _oligos_generator.py  _reference_database.py  _transcript_generator.py
oligo_designer_toolsuite/experiment_specific/: __init__.py  _padlock_sequence_designer.py
oligo_designer_toolsuite/oligo_efficiency/: __init__.py  _oligo_scoring.py  _probe_scoring.py  _set_scoring.py
oligo_designer_toolsuite/oligo_efficiency_filter/: __init__.py  _oligo_scoring.py  _set_scoring.py
oligo_designer_toolsuite/oligo_filter/: _filter_base.py  _property_filter_base.py  _property_filter_padlock.py  _property_filter_secondary_structure.py
output_SPOT_custom/: regions_with_insufficient_oligos.txt
src/: datamodule.py  filter_probes.py  get_overlap_matrix.py  get_probes.py  get_unique_probes.py  load_annotations.py  load_exome.py  nonoverlapping_sets.py  padlock_design.py  probefilter.py  utils.py
tests/: log_padlock_probe_designer_2023-3-24-14-33.txt  seqfish_pipeline.ipynb  test_AI_filters.py  test_DB.ipynb  test_DB.py  test_database.py  test_filters.ipynb  test_loader.ipynb  test_oligo_efficiency.py  test_oligo_efficiency_filter.py  test_oligo_property_filter.py  test_oligo_selection.py  test_oligo_specificity_filter.py  test_overlapping_oligos.py  test_pipelines.py  test_pre_filters.ipynb  test_pre_filters.py  test_probesets.ipynb  test_property_filters.py  test_sequence_design.py  test_sequence_generator.py  test_sequence_generator_and_database.py  test_specificity_filter.ipynb  test_specificity_filters.py  test_ui.py  test_utils.py
tests/data/: README.md  (+11 more)
toutorials/: padlock_probe_designer.ipynb
tutorials/: 1-oligo-sequences-generation.ipynb  2-oligo-database.ipynb  3-property-filters.ipynb  4-specificity-filters.ipynb  5-oligoset-generation.ipynb  SPOT_probe_designer.ipynb  build_a_custom_pipeline.ipynb  introduction_to_ODT_setup_a_custom_pipeline.ipynb  merfish_probe_designer.ipynb  padlock_oligo_designer.ipynb  padlock_probe_designer.ipynb  scrinshot_probe_designer.ipynb  seqFISH_pipeline_tester.ipynb  seqFISH_probe_designer.ipynb  seqfishplus_probe_designer.ipynb
unit_tests/: _test_DB.py  _test_pre_filters.py
(+320 files in other folders)
